Believe to have finished player input, will edit drawing to confirm